

Tickets:
	- Fixed #17: Feature - Send mail if quota reached
	- Fixed #157: Enhancement - Relaying Domains
	- Fixed #163: Enhancement - Add Support for Roundcube Mail (or switch from Squirrel)
	- Fixed #213: Enhancement - Bruteforce component - login attemps
	- Fixed #313: Enhancement - Some improvements on postfix's master.cf
	- Fixed #322: Enhancement - Add possibility to delete more then only one eMail Adress
	- Fixed #337: Enhancement - Add possibility to edit per user mail quotas
	- Fixed #368: Enhancement - Add custom TXT DNS resource records
	- Fixed #387: Enhancement - php.ini modifications to allow the usage of roundcube
	- Fixed #429: Enhancement - TXT entries should allow * as a valid character
	- Fixed #402: Task - Ajaxplorer - Not Compatible with php 5.4
	- Fixed #403: Defect - Hosting Plan Secure Code doesn't work
	- Fixed #404: Defect - Missing translations
	- Fixed #405: Bug - Custom message for maintenance mode is always overridden
	- Fixed #408: Defect: warning: master.cf: unused parameter: smtpd_override_options=no_address_mappings
	- Fixed #413: Defect: dovecot quota config inconsistent
	- Fixed #415: Defect - mailbox catchall catching everything.. not what it should..
	- Fixed #421: Defect: Adding email account not IDN compatible
	- Fixed #423: Malfunction: Ticket-Summary at Reseller-Overview
	- Fixed #424: BUG: After deleting alias domain the ftp accounts of this domain still exist
	- Fixed #427: Malfunction: DNS Servernames not IDN compatible stored in database
	- Fixed #432: Awstats static configuration generated when awstats dynamic is enabled
	- Fixed #440: Broken installer after External email servers commit
	- Fixed #445: Disabling domain and panel's backups does not work
	- Fixed #447: External mailserver relay_domains
	- Fixed #452: View Support Ticket
	- Fixed #456: Wrong welcome message usertype when create client
	- Fixed #457: Domain specific apache2 configuration gets deleted in imscp-setup (tx Jadawin)